cabal-version:   3.0
name:            radon-base
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Anut-py
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Radon.Access
    Radon.Access.Class
    Radon.Access.Config
    Radon.Access.Defaults
    Radon.Access.Defaults.Either
    Radon.Access.Defaults.Maybe
    Radon.Access.Defaults.String
    Radon.Access.Gen
    Radon.Access.Raylib
    Radon.Access.Raylib.Core
    Radon.Access.Raylib.Core.Audio
    Radon.Access.Raylib.Core.Camera
    Radon.Access.Raylib.Core.Models
    Radon.Access.Raylib.Core.Text
    Radon.Access.Raylib.Core.Textures
    Radon.Access.Raylib.Util.GUI
    Radon.Access.Raylib.Util.RLGL
    Radon.Access.Util

  other-modules:
    Radon.Internal.Math
    Radon.Internal.TH

  other-extensions: TemplateHaskell
  build-depends:
    , base              >=4.0      && <5.0
    , h-raylib          >=5.1.3.0  && <5.1.4.0
    , parsec            >=3.0.0    && <3.1.18.0
    , template-haskell  >=2.16.0.0 && <2.22.0.0

  hs-source-dirs:   src
  default-language: Haskell2010

executable radon-base-example
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   example
  main-is:          Main.hs
  other-modules:    Types
  build-depends:
    , base
    , radon-base

executable radon-bunnymark-example
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   bunnymark
  main-is:          Main.hs
  other-modules:    Types
  build-depends:
    , base
    , h-raylib
    , radon-base
